[package]
name = "battle-arena"
version = "0.1.0"
description = "Battle Arena"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "battle_arena"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.17.0"
num-derive = "0.3"
arrayref = "0.3.6"
num-traits = "0.2"
solana-program = "1.7.11"
spl-token = { version="3.1.1", features = [ "no-entrypoint" ] }
thiserror = "1.0"
borsh = "0.9.1"
game-metadata = {path = "../game-metadata", features = ["no-entrypoint"]}

[dev-dependencies]
solana-sdk = "1.7.11"
solana-program-test = "1.7.11"
field-offset = "0.3.4"